# centrifuge-chain

./: .gitignore  Cargo.toml  docker-compose-local-relay.yml
libs/common-traits/: Cargo.toml
libs/proofs/: Cargo.toml
pallets/anchors/: Cargo.toml
pallets/bridge/: Cargo.toml
pallets/bridge-mapping/: Cargo.toml
pallets/claims/: Cargo.toml
pallets/crowdloan-claim/: Cargo.toml
pallets/crowdloan-reward/: Cargo.toml
pallets/fees/: Cargo.toml
pallets/migration/: Cargo.toml
pallets/nft/: Cargo.toml
pallets/registry/: Cargo.toml
res/: altair-dev.json  mainnet-pre-spec.json
runtime/altair/: Cargo.toml
runtime/altair/src/: lib.rs
runtime/centrifuge/: Cargo.toml
runtime/centrifuge/src/: lib.rs
runtime/common/: Cargo.toml
runtime/development/: Cargo.toml
runtime/development/src/: lib.rs
runtime/integration-tests/: Cargo.toml
scripts/: init.sh
