[package]
name = "centrifuge-chain"
version = "0.10.9"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Centrifuge chain implementation in Rust."
build = "build.rs"
edition = "2018"
license = "LGPL-3.0"
default-run = "centrifuge-chain"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/centrifuge-chain"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "centrifuge/centrifuge-chain", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "centrifuge/centrifuge-chain" }
is-it-maintained-open-issues = { repository = "centrifuge/centrifuge-chain" }

[[bin]]
name = "centrifuge-chain"
path = "src/main.rs"

[workspace]
members = [
	"pallets/restricted-tokens",
	"pallets/bridge-mapping",
	"pallets/fees",
	"pallets/anchors",
	"pallets/claims",
	"pallets/collator-allowlist",
	"pallets/crowdloan-claim",
	"pallets/crowdloan-reward",
	"pallets/migration",
	"pallets/bridge",
	"pallets/nft",
	"pallets/pools",
	"pallets/loans",
	"pallets/registry",
	"pallets/permissions",
	"libs/common-traits",
	"libs/common-types",
	"libs/proofs",
	"runtime/altair",
	"runtime/centrifuge",
	"runtime/common",
	"runtime/integration-tests",
]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.106", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.2.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
log = "0.4.8"
structopt = { version = "0.3.8" , optional = true }
serde_json = "1.0"

# primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-timestamp = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-client-db = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# Cli specific
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
node-inspect = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# frame dependencies
pallet-anchors = { path = "./pallets/anchors", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
substrate-frame-rpc-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# Cumulus dependencies
cumulus-client-network = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-client-consensus-relay-chain = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-relay-chain-local = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-client-service = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16" }

# Polkadot dependencies
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16" }

# node-specific dependencies
altair-runtime = { path = "runtime/altair" }
centrifuge-runtime = { path = "runtime/centrifuge" }
development-runtime = { path = "runtime/development" }
runtime-common = { path = "runtime/common" }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils  = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
tempfile = "3.1.0"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[features]
default = [ "std" ]
std = [
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"sp-consensus-babe/std"
]
runtime-benchmarks = [
	"altair-runtime/runtime-benchmarks",
	"centrifuge-runtime/runtime-benchmarks",
	"development-runtime/runtime-benchmarks",
]


[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-executive = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-support = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-system = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-aura = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-babe = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-balances = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-collective = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-gilt = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-identity = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-indices = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-membership = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-nicks = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-offences = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-session = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-society = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-staking = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-tips = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-utility = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-beefy = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
pallet-preimage = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
beefy-primitives = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
beefy-gadget = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
beefy-gadget-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
remote-externalities = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-cli = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-client-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-client-db = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-consensus-uncles = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-executor = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-informant = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-keystore = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-network = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-offchain = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-service = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-tracing = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sc-utils = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-api = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-authorship = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-consensus = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-core = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-externalities = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-inherents = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-io = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-keyring = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-keystore = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-offchain = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-rpc = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-runtime = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-serializer = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-session = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-staking = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-std = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-storage = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-tracing = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-trie = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-version = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-test-client = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-test-utils = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }
substrate-test-utils-derive = { git = "https://github.com/paritytech//substrate", rev = "19162e43be45817b44c7d48e50d03f074f60fbf4" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-client = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-service = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-rpc = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-test-runtime = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
polkadot-test-service = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
test-runtime-constants = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
westend-runtime = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
xcm = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }
xcm-simulator = { git = "https://github.com/paritytech//polkadot", rev = "41ab002d7451766324a9f314fee11c9c53314350" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-pallet-parachain-system  = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
parachain-info = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-relay-chain-local = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
cumulus-test-relay-validation-worker-provider = { git = "https://github.com/paritytech//cumulus", rev = "867bfcd8f87cc986d1a3e9eeaf16c8b4e9a27790" }
